changes swagger.json and regenerate swagger.json
